tests/resources/errors/errors8.ac
import std;
import std.Error;

struct TestError :: *Error {
    const char* get_name() const {
        return "TestError";
    }
    const char* get_message() const {
        return "test error msg";
    }
}

void foo() raises TestError {
    std.print("foo called!");
    raise TestError{};
}

void main() {
    try err: foo() {
        std.print("caught error!");
        std.print(err.get_message());
    };
}